--- a/index.html
+++ b/index.html
@@ -51,20 +51,19 @@
                 <div class="modal-body">
 					<div class="radio">
 					<label class="radio-inline">
-						<input type="radio" name="inlineRadioOptions" id="inlineRadio1" value="1">Save settings only for this browser
+						<input type="radio" name="inlineRadioOptions" id="inlineRadio1" value="1">Save settings locally (this browser only).
 					</label>
 					</div>
 					<div class="radio">
 					<label class="radio-inline">
-						<input type="radio" name="inlineRadioOptions" id="inlineRadio2" value="2">Save changes to Domoticz to use as default after clearing cache
+						<input type="radio" name="inlineRadioOptions" id="inlineRadio2" value="2">Save settings to Domoticz (for all devices).
 					</label>
 					</div>
 					<div class="radio">
-					<button type="button" class="btn btn-primary" onclick="loadsettingsfromdomoticz()" data-dismiss="modal">Refresh settings from Domoticz</button>
+					<button type="button" class="btn btn-primary glyphicon glyphicon-import" onclick="loadsettingsfromdomoticz()" data-dismiss="modal"></button> Import settings from domoticz.
 					</div>
 					<div class="form-group">
-						<label for="domoticzUrl">domoticz server</label><input type="text" class="form-control" id="domoticzUrl" placeholder="e.g. http://x.x.x.x:8080 or https://user:pass@x.x.x.x"><button type="button" class="btn btn-primary" onclick="saveSettings()">
-					</div>
+						<label for="domoticzUrl">domoticz server</label><input type="text" class="form-control" id="domoticzUrl" placeholder="e.g. http://x.x.x.x:8080 or https://user:pass@x.x.x.x">					</div>
 
 					<div class="form-group">
 						<label for="">Panel Color</label>
