--- a/index.html
+++ b/index.html
@@ -74,18 +74,18 @@
 					</div>
 
 					<div class="checkbox">
-						<label><input type="checkbox" id="weatherWidget" value="1">Weather Widget (uses DarkSky settings from domoticz!)</label>
+						<label><input type="checkbox" id="darkskyWidget" value="1">Darksky Widget (uses settings from domoticz)</label>
 					</div>
 
 					<div class="checkbox">
-						<label><input type="checkbox" id="weathermapWidget" value="1">Weathermap Widget (buienradar.nl)</label>
+						<label><input type="checkbox" id="buienradarWidget" value="1">Buienradar Widget</label>
 					</div>
 
 					<div class="checkbox">
-						<label><input type="checkbox" id="trafficWidget" value="1">Traffic Widget (anwb.nl)</label>
+						<label><input type="checkbox" id="anwbWidget" value="1">ANWB Widget</label>
 					</div>
 					<div class="checkbox">
-						<label><input type="checkbox" id="newsWidget" value="1">RSS Widget</label>
+						<label><input type="checkbox" id="rssWidget" value="1">RSS Widget</label>
 					</div>
 
 					<div class="form-group">
@@ -95,7 +95,7 @@
 					</div>
 
 					<div class="checkbox">
-						<label><input type="checkbox" id="calendarWidget" value="1">Public Calendar Widget (ics)</label>
+						<label><input type="checkbox" id="icsWidget" value="1">ICS Widget (public accessible ics)</label>
 					</div>
 					<div class="form-group">
 						<label for="rssUrl">ICS Url (gmail calender has to be 'shared')</label>
