--- a/index.html
+++ b/index.html
@@ -22,8 +22,13 @@
 
             <div class="nav pull-right">
                 <div class="btn-group" role="group">
-                    <a class="btn btn-primary glyphicon glyphicon-exclamation-sign" href="https://github.com/safi78/framb0ise/issues" target="_blank" data-container="body" data-toggle="popover" data-placement="bottom" data-content="Click here to report a bug or suggest a new feature!"></a> <a class="btn btn-primary glyphicon glyphicon-lock" data-container="body" data-toggle="popover" data-placement="bottom" data-content="Click here for the security panel ... " onclick="showSecurityPanel()"></a><a class="btn btn-primary glyphicon glyphicon-heart-empty" href="https://www.paypal.me/safi78" target="_blank" data-container="body" data-toggle="popover" data-placement="bottom" data-content="If you like this project, click here to buy me a beer!"></a><a class="btn btn-primary glyphicon glyphicon glyphicon-refresh" onclick="fullPagerefresh()" data-container="body" data-toggle="popover" data-placement="bottom" data-content="Click here to refresh the page."></a><a class="btn btn-primary glyphicon glyphicon-cog" onclick="editSettings()" data-container="body" data-toggle="popover" data-placement="bottom" data-content="Click here to edit the settings."></a>
+                    <a class="btn btn-primary glyphicon glyphicon-lock" data-container="body" data-toggle="popover" data-placement="bottom" data-content="Click here for the security panel ... " onclick="showSecurityPanel()"></a><a class="btn btn-primary glyphicon glyphicon glyphicon-refresh" onclick="fullPagerefresh()" data-container="body" data-toggle="popover" data-placement="bottom" data-content="Click here to refresh the page."></a><a class="btn btn-primary glyphicon glyphicon-cog" onclick="editSettings()" data-container="body" data-toggle="popover" data-placement="bottom" data-content="Click here to edit the settings."></a>
                 </div>
+            <div class="btn-group" role="group">
+	            <a class="btn btn-primary glyphicon glyphicon-exclamation-sign" href="https://github.com/safi78/framb0ise/issues" target="_blank" data-container="body" data-toggle="popover" data-placement="bottom" data-content="Click here to report a bug or suggest a new feature!"></a>
+	            <a class="btn btn-primary glyphicon glyphicon-heart-empty" href="https://www.paypal.me/safi78" target="_blank" data-container="body" data-toggle="popover" data-placement="bottom" data-content="If you like this project, click here to buy me a beer!"></a>
+
+            </div>
             </div>
         </div>
     </nav>
@@ -41,8 +46,11 @@
 </script><script src="bower_components/paginathing/paginathing.js" type="text/javascript">
 </script><script src="bower_components/jquery-rss/dist/jquery.rss.min.js" type="text/javascript">
 </script><script src="bower_components/JavaScript-Ical-Parser/ical_parser.js" type="text/javascript">
-</script><script src="framboise.js" type="text/javascript"></script>
+</script>
 <script src="bower_components/jQuery-MD5/jquery.md5.js" type="text/javascript"></script>
+<script src="bower_components/js-cookie/src/js.cookie.js" type="text/javascript"></script>
+<script src="bower_components/bootstrapThemeSwitcher/jquery.bootstrapThemeSwitcher.js" type="text/javascript"></script>
+<script src="framboise.js" type="text/javascript"></script>
 
 
 <!-- Modal Settings -->
@@ -55,7 +63,8 @@
                 </div>
 
                 <div class="modal-body">
-                    <div class="radio">
+
+                    <div class="form-group">
                         Import previously saved settings from domoticz. <a class="btn btn-primary glyphicon glyphicon-import" onclick="loadsettingsfromdomoticz()" data-dismiss="modal"></a>
                     </div>
 
